# Rogii-wellbore

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: plan-analysis.md  prepare-pr.md  review-sql.md  run-eda.md  run-modeling.md  summarize-analysis.md  update-agent-docs.md
.github/: copilot-instructions.md
.github/instructions/: data.instructions.md  docs.instructions.md  notebooks.instructions.md  python.instructions.md  sql.instructions.md
.github/prompts/: plan-analysis.prompt.md  prepare-pr.prompt.md  review-sql.prompt.md  run-eda.prompt.md  run-modeling.prompt.md  summarize-analysis.prompt.md  update-agent-docs.prompt.md
.github/workflows/: ci.yml
docs/: skills-overview.ja.md
docs/agent/: agent-behavior.md  analysis-workflow.md  data-catalog.md  metrics-and-definitions.md  project-overview.md  reporting-guidelines.md  repository-structure.md  security-and-privacy.md  statistical-and-ml-guidelines.md  task-description-en.txt  validation-and-testing.md
experiments/exp001_baseline/: README.md  cv_result.txt  make_carryforward_sub.py  train.py
experiments/exp002_offset_typewell/: README.md  cv_result.txt  train.py
experiments/exp003_viterbi_decode/: README.md  cv_result.txt  train.py
experiments/exp004_particle_filter/: README.md  cv_result.txt  train.py
kaggle/: README.md  SUBMISSIONS.md
notebooks/: 001_eda_basic_stats.py  README.md
scripts/: check_no_raw_data_commit.py  check_no_sensitive_patterns.py  download_data.sh  eda_overview.py  kaggle_submit.sh  run_quality_checks.sh  validate_agent_docs.py
(+48 files in other folders)
