[project]
name = "rogii-wellbore"
version = "0.1.0"
description = "Kaggle ROGII Wellbore Geology Prediction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars",
    "pyarrow",
    "matplotlib",
    "seaborn",
    "papermill",
    "ipykernel",
    "python-dotenv",
    "pydantic",
    "scikit-learn>=1.8.0",
    "japanize-matplotlib",
    "mlflow",
    "lightgbm",
    "catboost",
    "kaggle",
    "numba>=0.65.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/analysis_project"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
